@@ -12,12 +12,13 @@
  <property name="factory">cmf.calendar.event</property>
  <property name="add_view_expr">string:${folder_url}/++add++Event</property>
  <property name="link_target"></property>
- <property name="immediate_view">edit.html</property>
+ <property name="immediate_view">edit</property>
  <property name="global_allow">True</property>
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
  <alias from="(Default)" to="@@view.html"/>
+ <alias from="edit" to="@@edit.html"/>
  <alias from="view" to="@@view.html"/>
  <action title="View" action_id="view" category="object" condition_expr=""
     icon_expr="string:${portal_url}/preview_icon.png" link_target=""
@@ -26,7 +27,7 @@
  </action>
  <action title="Edit" action_id="edit" category="object" condition_expr=""
     icon_expr="string:${portal_url}/edit_icon.png" link_target=""
-    url_expr="string:${object_url}/edit.html" visible="True">
+    url_expr="string:${object_url}/edit" visible="True">
   <permission value="Change portal events"/>
  </action>
 </object>
