@@ -4,6 +4,8 @@ Products.CMFCalendar Changelog
 2.3.0 (unreleased)
 ------------------
 
+- profiles: Modified Method Aliases used in type Actions.
+
 
 2.3.0-beta (2012-03-21)
 ------------------------
